--- a/src/Weather.css
+++ b/src/Weather.css
@@ -71,5 +71,13 @@
 }
 .weather p{
     margin: 0;
-    
+}
+
+.weather .unit a{
+    text-decoration: none;
+}
+.loader{
+    display: block;
+    margin: 100px auto;
+    max-width: 200px ;
 }
