--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,83 +1,79 @@
-:root{
-    --gray: #3c4142;
+:root {
+  --gray: #3c4142;
 }
-.search-form, .submit-form{
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
+.search-form,
+.submit-form {
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
 }
-.search-form{
-    background: #F5F1FE;
+.search-form {
+  background: #f5f1fe;
 }
-.submit-form{
-    background: #242424;
-    color: #fff;
-    margin-left: 5px;
-}
-
-
-.weather{
-    border: solid 1px grey;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 30px;
-    border-radius: 10px;
-    border-radius: 10px;
-    max-width: 800px;
-    display: block;
-    margin: 100px auto;
-
-}
-.weather h2{
-    color: #878787;
-    font-size: 30px;
-    line-height: 28px;
-   
-    
-}
-.weather li{
-    font-size: 18px;
-    list-style: none;
-    line-height: 20px;
-    color: #8e918f;
-}
-.weather strong{
-    color: var(--gray);
-}
-.weather ul{
-    padding:0 ;
-    margin: 0;
-}
-.weather h1{
-    font-size: 50px;
-    margin: 0;
-    
-}
-.weather .temperature{
-    font-size: 70px;
-    font-weight: 400;
-    color: var(--gray);
-
-}
-.weather .unit{
-    font-size: 16px;
-    position: relative;
-    top: -34px;
-}
-.weather img{
-    line-height: 80px;
-    width: 180px;
-    position: relative;
-    top: -10px;
-}
-.weather p{
-    margin: 0;
+.submit-form {
+  background: blueviolet;
+  color: #fff;
+  margin-left: 5px;
 }
 
-.weather .unit a{
-    text-decoration: none;
+.weather {
+  border: none;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 30px;
+  border-radius: 10px;
+  border-radius: 10px;
+  max-width: 800px;
+  display: block;
+  margin: 100px auto;
+  background-color: #fefefe;
 }
-.loader{
-    display: block;
-    margin: 100px auto;
-    max-width: 200px ;
+.weather h2 {
+  color: #878787;
+  font-size: 30px;
+  line-height: 28px;
+}
+.weather li {
+  font-size: 18px;
+  list-style: none;
+  line-height: 20px;
+  color: #8e918f;
+}
+.weather strong {
+  color: var(--gray);
+}
+.weather ul {
+  padding: 0;
+  margin: 0;
+}
+.weather h1 {
+  font-size: 50px;
+  margin: 0;
+}
+.weather .temperature {
+  font-size: 70px;
+  font-weight: 400;
+  color: var(--gray);
+}
+.weather .unit {
+  font-size: 16px;
+  position: relative;
+  top: -34px;
+}
+.weather img {
+  line-height: 80px;
+  width: 180px;
+  position: relative;
+  top: -10px;
+}
+.weather p {
+  margin: 0;
+}
+
+.weather .unit a {
+  text-decoration: none;
+}
+.loader {
+  display: block;
+  margin: 100px auto;
+  max-width: 200px;
 }
